--- a/Writeup/thesis.bib
+++ b/Writeup/thesis.bib
@@ -1,18 +1,50 @@
 @book{ModAN,
-author = {Fujia Yang, Joseph H. Hamilton},
-title = {Modern Atomic and Nuclear Physics},
-year = 2010
+author = {{Fujia Yang, Joseph H. Hamilton}},
+title = {{Modern Atomic and Nuclear Physics}},
+year = {{2010}}
 }
 
 @book{LasCool,
-author = {Harold J. Metcalf},
-title = {Laser Cooling and Trapping},
-year = 1999
+author = {{Harold J. Metcalf}},
+title = {{Laser Cooling and Trapping}},
+year = {{1999}}
 }
 
-@unpublished{TomT,
-author = {Thomas Procter},
-title = {New Techniques of Laser Spectroscopy on Exotic Isotopes of Gallium and Francium},
-date = 2013,
-note = {Doctoral Dissertation}
+@phdthesis{TomT,
+author = {{Thomas Procter}},
+title = {{New Techniques of Laser Spectroscopy on Exotic Isotopes of Gallium and Francium}},
+year = {{2013}},
+}
+
+@article{CFBS,
+author = {{Anika V. et al.}},
+title = {{The Collinear Fast Beam laser Spectroscopy experiment at TRIUMF}},
+year = {{2015}}
+}
+
+@article{GA69,
+author = {{T.J. Proctor et al.}},
+title = {{Nuclear mean-square-charge radii of $^{63,64,66,68-82}$Ga nuclei: No anomalous behavious at N = 32}},
+year = {{2012}}
+}
+
+@book{Nut,
+author = {{Carlos A. Bertulani}},
+title = {{Nuclear Physics in a Nutshell}},
+year = {{2007}}
+}
+
+
+@article{voigt,
+author = {{G.K. Wertheim et al.}},
+title = {{Determination of the Gaussian and Lorentzian content of experimental lineshapes}},
+journal = {{Review of Scientific Instruments}},
+year = {{1974}},
+volume = {{45}}
+}
+
+@book{cmec,
+author = {{David Morin}},
+title = {{Introduction to Classical Mechanics}},
+year = {{2008}}
 }
