--- a/Writeup/Laser_spec_triumf/Laser_spec_triumf.tex
+++ b/Writeup/Laser_spec_triumf/Laser_spec_triumf.tex
@@ -1,33 +1,50 @@
-\documentclass[12pt,a4paper,margin=1in]{report}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{braket}
-\usepackage{natbib}
-\usepackage{bm}
-\usepackage[toc,page]{appendix}
-\pagenumbering{arabic}
-\linespread{1.3}
-\begin{document}
+\noindent This chapter is intended as a brief introduction to the laser spectroscopy experiment present at TRIUMF, with special emphasis on the parts relevant to this work. A more complete description of the experiment can be found in \cite{CFBS}.
 
-\chapter{Laser Spectroscopy at TRIUMF}
-\label{Lspec}
-The Laser Spectroscopy experiment at TRIUMF, shown in Fig. \ref{exp} relies on the production of rare isotopes using the 500 MeV cyclotron present on-site. A proton beam is directed at a target material and the products of the collision are mass separated. The desired particle is then directed down a beamline towards one of the numerous experiments present at TRIUMF. In the case of the Laser Spectroscopy experiment, the beam first passes by the Radio Frequency Quadrupole (RFQ) trap that is part of Titan. The particles can either completely bypass the RFQ trap or be collected and cooled. In the latter case, the ions are made to collide with an inert gas at a lower temperature, reducing the spread in velocity present from their initial production. After a certain collection time the particles present in the RFQ can be ejected in bunches.
+Located in the ISAC I (Isotope Separator and ACcelerator) experimental hall at TRIUMF, as shown in Fig. \ref{loc}, the Laser Spectroscopy experiment at TRIUMF, more specifically known as the Collinear Fast-Beam laser Spectroscopy (CFBS) experiment, is shown in Fig. \ref{exp}.
 
-Whether the particles are bunched in the RFQ or bypass it altogether, the next relevant section of the experiment is the Charge Exchange Cell (CEC). Here, ions can recapture the electrons that have been stripped to allow their steering down the beamline. This is done by colliding the ions with an alkali vapour. This method presents a major setback, however. As the alkali gas will disperse (diffuse), any light collection instruments such as a photo multiplier tube (PMT) will progressively get coated as the experiment continues, reducing the overall light collection efficiency. To avoid this problem, the light collection region (LCR) has been moved away from the CEC. This decision introduces another problem: Optical pumping. This effect is the main reason for this work, and is described in the following section.
 
-\begin{figure}
-\includegraphics[width=\textwidth]{experiment.png}
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{Laser_spec_triumf/ISAC.png}
+\caption{\small The location of the CFBS experiment within the ISAC I experimental hall, as well as the locations of the beamline and other experiments present at TRIUMF.}
+\label{loc}
+\end{figure}
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{Laser_spec_triumf/experiment.png}
+\caption{\small Schematic of the CFBS experiment at TRIUMF.\cite{CFBS} Radioactive ions produced in the target area are accelerated towards the experiment, entering just before the RFQ trap, where they can be bunched or allowed to continue unimpeded. The ions then pass through the CEC, where they collide with an alkali vapour. In the region between the CEC and the LCR, the atoms interact with a counter-propagating laser. This region is a blind spot where emitted photons cannot be measured and is the main focus of this work.}
 \label{exp}
 \end{figure}
 
-\section{Optical Pumping}
 
-The distance between the CEC and the LCR introduces the possibility of optical pumping, and effect that can change the ground state distribution of the atoms as they travel the distance between the two regions. This change in ground state distribution is induced by the interaction of the atoms with the laser before they reach the LCR. In an atomic system that has not interacted with a laser, the ground state distribution of the hyperfine levels is statistical (REFERENCE). The likelihood of an electron occupying a hyperfine level with quantum number \textbf{F} is proportional to $F(F+1)$. In a system with N hyperfine levels, each with \textbf{F} = \textbf{F}$_n$, where $n$ = 1,2,3,..N, the probability of an electron occupying, say, the $i$-th level is given by
-\begin{equation}
-\mathrm{Prob(F}_i) = \frac{F_i(F_i+1)}{\sum_{j=1}^\mathrm{N}F_j(F_j+1)}
-\end{equation}
+At TRIUMF, radioactive atoms are produced through the collision of protons, accelerated by the 500 MeV cyclotron present on-site, and a target material. The products of the collision are then ionized, accelerated and mass separated using a mass separator with resolution $m/\Delta m \approx 5000$, where $m$ is the mass of the atom. \cite{CFBS} After the required atoms have been selected, they are then directed to the CFBS experiment, detailed below. 
 
-\end{document}
+\section{Radio Frequency Quadrupole (RFQ) Trap}
+
+The ions enter the CFBS experiment as a continuous beam, where they first encounter a radio frequency quadrupole (RFQ) Paul Trap \cite{CFBS}. Here, the atoms can enter the RFQ trap and collect for a pre-determined collection time, after which they are released in bunches. Bunching the atoms is done to reduce background counts. Briefly, the light collection system is triggered on the release of the ion bunches, reducing the available time for background photons to be counted. As the light collection system is only sensitive to photons for the time window during which the ion bunch passes through the interaction region, background counts are also only collected for this time. Alternatively, photons are collected continuously, whether or not there are resonant ions in the interaction region, allowing the signal to background ration to diminish over time. 
+\section{Charge Exchange Cell (CEC)}
+If the aim is to investigate transitions in a neutral atom, then the ions must regain their lost electron. This is the role of the charge exchange cell (CEC), shown in detail in Fig. \ref{CEC}. Using an alkali-metal vapour that is circulated perpendicularly to the direction of the beam, the CEC provides a source of electrons for the oncoming ions to capture. This introduces an issue, however. As the alkali-metal vapour can not be entirely contained to the CEC, any light collection instruments, such as a photo-multiplier tube,  must be located further down the beamline. This is done to avoid the growth of an alkali-metal coating on the light-collection surfaces, which would significantly hamper the collection of resonant photons as the experiment progresses. This decision provides the \emph{raison d'être} for this work, as it introduces the opportunity for optical pumping, discussed in detail in Chapter \ref{Op_pump}. Since the ions are neutralized in the CEC, they can no longer be accelerated through the use of an electrostatic potential. As such, they must be brought into resonance before they enter the interaction region. This is done using a set of electrodes present in front of the CEC, shown in Fig. \ref{exp}.
+
+In the case of transitions present in the ion, then the CEC is unneeded, and the final acceleration is done using a mesh present within the LCR, detailed in the next section. The location of the mesh is chosen such that the ions are in resonance just as they pass the light collection system, removing the possibility that optical pumping could significantly affect the results of the experiment. 
+
+
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale=0.55]{Laser_spec_triumf/CEC.png}
+\end{center}
+\caption{\small The charge exchange cell allows oncoming ions to be neutralized through collision with a perpendicularly flowing alkali-metal vapour.\citep{CFBS}}
+\label{CEC}
+\end{figure}
+
+
+
+\section{Light Collection Region (LCR)}
+
+Located roughly 40 cm down the beamline from the CEC, the light collection region (LCR) (Fig. \ref{LCR}) houses the equipment necessary for detecting the photons emitted when a beam of ions/atoms is in resonance with a counter propagating laser. A concave mirror located opposite the photo-multiplier tube (PMT) allows all photons within the 5\% solid angle of the detection system to be collected by a series of light collection optics, placed in front of the PMT, designed to optimize photon detection efficiency at a particular wavelength. Using knowledge of the laser frequency, the beam energy and photon counts, the energies of the hyperfine transitions can be determined. 
+\begin{figure}[t!]
+\includegraphics[scale=0.35]{Laser_spec_triumf/LCR.png}
+\caption{\small Schematic of the light collection region. Photons emitted through atom/laser interactions are directed towards a photo-multiplier tube using a combination of mirrors and lenses. \citep{CFBS}}
+\label{LCR}
+\end{figure}
+
+%\end{document}
