--- a/Writeup/Theory/Theory.tex
+++ b/Writeup/Theory/Theory.tex
@@ -314,7 +314,7 @@ The rate at which photons are absorbed by atoms is an important factor in the si
 \begin{equation}
 \gamma_p =  \frac{s_0/2}{1+s_0+(2\delta/\gamma)^2}
 \end{equation}
-where $s_0$ is the on resonance saturation parameter $s_0 = I/I_s$, $\delta$ is the detuning parameter and $\gamma$ is the decay rate of the excited state. $I$ is the intensity of the laser field and $I_s$ is the saturation intensity defined as
+where $s_0$ is the on resonance saturation parameter $s_0 = I_l/I_s$, $\delta$ is the detuning parameter and $\gamma$ is the decay rate of the excited state. $I_l$ is the intensity of the laser field and $I_s$ is the saturation intensity defined as
 \begin{equation}
 I_s \equiv \frac{\pi h c}{3 \lambda^3 \tau}
 \end{equation}
@@ -323,6 +323,15 @@ where $\lambda$ is the wavelength of emission of a resonant photon and $\tau = 1
 \delta =|f_{l} - f_{res}|
 \end{equation}
 where $f_l$ is the frequency of the laser and $f_{res}$ is the resonant frequency of the transition.
+
+\section{Optical Pumping}
+
+The distance between the CEC and the LCR introduces the possibility of optical pumping, a process that changes the ground state distribution of the atoms as they travel the distance between the two regions. This change in ground state distribution is induced by the interaction of the atoms with the laser before they reach the LCR. In an atomic system that has not interacted with a laser, the ground state distribution of the hyperfine levels is statistical (REFERENCE). The likelihood of an electron occupying hyperfine level \textbf{F} is proportional to $F(F+1)$. In a system with N hyperfine ground states, each with \textbf{F} = \textbf{F}$_n$, where $n$ = 1,2,3,..N, the probability of an electron occupying, say, the $i$-th level is given by
+\begin{equation}
+\mathrm{Prob(F}_i) = \frac{F_i(F_i+1)}{\sum_{j=1}^\mathrm{N}F_j(F_j+1)}
+\end{equation}
+
+However, as the electron goes through a series of excitation/decay cycles, certain ground states will be selected over others, depending on selection rules as well as transition probabilities. To illustrate the effect of optical pumping, consider the following: A hyperfine system has two ground states, \textbf{F}$_1$ and \textbf{F}$_2$, as well as an excited state \textbf{F}$_3$.
 
 \bibliographystyle{plain}
 \bibliography{bibtex}{}
